# file-organizer-2025-06-15

./: .gitignore  README.md  index.html  package-lock.json  package.json  rules.yaml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
