[package]
name = "file-organizer"
version = "0.1.0"
description = "A file organizer with YAML-based rules"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-opener = "2.2.7"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
