[package]
name = "file-organizer"
version = "0.1.0"
description = "A file organizer with YAML-based rules"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
regex = "1.10.4"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-dialog = "2.0.0-beta.8"
tauri-plugin-shell = "2.0.0-beta.8"
dirs = "5.0.1"
chrono = "0.4.38"

[features]
# By default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
